@@ -176,6 +176,8 @@ preferences.startup.last=Last
 preferences.startup.last.mnemonic=L
 preferences.startup.custom=Custom
 preferences.startup.custom.mnemonic=T
+preferences.autotrim=Automatically trim labels
+preferences.autotrim.mnemonic=A
 preferences.shuffle=Shuffle
 preferences.shuffle.seed=Random Seed
 preferences.shuffle.seed.mnemonic=R
@@ -499,6 +501,8 @@ syntax.help={0} (or {1})\t\tPrint this help message and exit.
 syntax.debug={0}\t\t\tSwitch on debug mode.
 syntax.nodebug={0}\t\tSwitch off debug mode. (Default.)
 syntax.compat={0} <level>\t\tSet the compatibility level.
+syntax.autotrimlabels={0}\tAutomatically trim labels.{1}
+syntax.noautotrimlabels={0}\tDon''t trim labels.
 syntax.maptexspecials={0}\tMap TeX special characters.{1}
 syntax.nomaptexspecials={0}\tDon''t map TeX special characters.{1}
 syntax.tex_encoding={0} <encoding>\t\tTeX (.tex or .dbtex) file encoding.
