@@ -1,0 +1,3 @@
+#!/usr/bin/bash
+
+pdflatex -jobname test-dbtex-1000x6-doc9 test-dbtex-doc
