@@ -1,0 +1,12 @@
+\documentclass{article}
+
+\usepackage{datatool}
+
+\DTLloaddb{testdata}{sample-1000x3.csv}
+
+\begin{document}
+\DTLforeach*[\equal{\Fieldi}{grammatically}]{testdata}
+ {\Fieldi=Field1,\Fieldii=Field2,\Fieldiii=Field3}
+ {\Fieldi, \Fieldii, \Fieldiii.\par}
+
+\end{document}
