@@ -1,0 +1,16 @@
+\documentclass{article}
+
+\usepackage{datatool}
+
+\DTLloaddb{testdata}{sample-1000x3.csv}
+
+\begin{document}
+\DTLforeach*{testdata}
+ {\Fieldi=Field1,\Fieldii=Field2,\Fieldiii=Field3}
+ {%
+   \ifdefstring{\Fieldi}{grammatically}
+   {\Fieldi, \Fieldii, \Fieldiii.\par\dtlbreak}
+   {}%
+ }
+
+\end{document}
