@@ -1,0 +1,13 @@
+\documentclass{article}
+
+\usepackage{datatool}
+
+\DTLloaddb{testdata}{sample-1000x3.csv}
+
+\begin{document}
+
+\DTLassignfirstmatch{testdata}{Field1}{grammatically}
+ {\Fieldi=Field1,\Fieldii=Field2,\Fieldiii=Field3}
+\Fieldi, \Fieldii, \Fieldiii.\par
+
+\end{document}
